# agent-doctor

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: init.rs  lsp.rs  main.rs
crates/cli/tests/: e2e.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  content_addr.rs  deep.rs  design_system.rs  diagnostics.rs  effect_imports.rs  engine.rs  examples.rs  file_length.rs  fn_index.rs  index.rs  lib.rs  lint.rs  matchers.rs  react.rs  runner.rs  single_use.rs  structural.rs  symbol_graph.rs  text.rs  ts_directives.rs  tsconfig.rs
crates/core/tests/: agent.rs  catalog.rs  config.rs  cross_file.rs  design_system.rs  engine.rs  patterns.rs
crates/impact/: Cargo.toml
crates/impact/src/: lib.rs
crates/merge/: Cargo.toml
crates/merge/src/: items.rs  lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: footprint.rs  ledger.rs  lib.rs
crates/policy/src/: lib.rs
crates/server/src/: lib.rs  mcp.rs
crates/vcs/: Cargo.toml
crates/vcs/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: ARCHITECTURE.md  INTEGRATIONS.md  PLAN.md  RULES.md  TOOLKIT.md
examples/five-agents/: README.md  agent.sh  run.sh
npm/agent-doctor/: package.json
npm/effect-doctor/: package.json
plugins/agent-doctor/.claude-plugin/: plugin.json
site/: astro.config.mjs  package-lock.json  package.json
site/public/: robots.txt
site/public/pkg/: agent_doctor_wasm.js  (+3 more)
site/scripts/: generate-og.mjs
(+22 files in other folders)
