[package]
name = "agent_doctor_orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agent_doctor_core.workspace = true
agent_doctor_impact.workspace = true
agent_doctor_policy.workspace = true
agent_doctor_server.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
