[package]
name = "agent_doctor_wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
agent_doctor_core = { path = "../core", default-features = false }
serde_json.workspace = true
wasm-bindgen = "0.2"
